Update Neighborhood Clustering & Segmentation.ipynb

--- a/Neighborhood Clustering & Segmentation.ipynb
+++ b/Neighborhood Clustering & Segmentation.ipynb
@@ -282,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# type your answer here\n",
+    "# Specify the limit and the radius\n",
     "LIMIT = 100\n",
     "radius = 500\n",
     "\n",
@@ -571,7 +571,7 @@
     }
    ],
    "source": [
-    "# type your answer here\n",
+    "# Use getNearbyVenues function to create toronto_venues\n",
     "\n",
     "toronto_venues = getNearbyVenues(names=df_Toronto['Neighborhood'],\n",
     "                                   latitudes=df_Toronto['Latitude'],\n",
