--- a/Neighborhood Data Wrangling.ipynb
+++ b/Neighborhood Data Wrangling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Neighborhood Clustering & Segmentation"
+    "## Neighborhood Data Wrangling"
    ]
   },
   {
