Update Neighborhood Data Wrangling.ipynb

--- a/Neighborhood Data Wrangling.ipynb
+++ b/Neighborhood Data Wrangling.ipynb
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Shape of the dataset."
+    "#### Number of rows in the dataset using .shape"
    ]
   },
   {
